[workspace]

members = [
  "source/sak_logger",
  "source/saksaha_network",
  "source/sak_crypto",
  "source/sak_proofs",
  "source/sak_fs",
  "source/sak_kv_db",
  "source/sak_rpc_interface",
  "source/sak_p2p_addr",
  "source/sak_p2p_peertable",
  "source/sak_p2p_frame",
  "source/sak_p2p_discovery",
  "source/sak_p2p_id",
  "source/sak_p2p_transport",
  "source/sak_task_queue",
  "source/sak_utils_time",
  "source/sak_utils_net",
  "source/sak_contract_std",
  "source/sak_dist_ledger",
  "source/hyper_server",
  "source/hyper_rpc_router",
  "source/sak_vm",
  "source/sak_test_utils",
  "source/wasm_postprocess",
  "source/type_extension",
  "source/saksaha_rs",
  "source/saksaha_wallet",

  # Contracts (independently compiled and processed)
  "source/sak_validator",

  # internals
  "internals/ci",

  # externals
  "external/envelope_term",
  "external/envelope_contract",
]
