[workspace]

members = [
  "source/sak_logger",
  "source/saksaha_network",
  "source/sak_credential",
  "source/sak_crypto",
  "source/sak_jni",
  "source/sak_proof",
  "source/sak_proof_types",
  "source/sak_proof_circuit",
  "source/sak_dir",
  "source/sak_kv_db",
  "source/sak_mrs",
  "source/sak_store_accessor",
  "source/sak_store_interface",
  "source/sak_rpc_interface",
  "source/sak_p2p_addr",
  "source/sak_p2p_peertable",
  "source/sak_p2p_frame",
  "source/sak_p2p_discovery",
  "source/sak_p2p_id",
  "source/sak_p2p_transport",
  "source/sak_task_queue",
  "source/sak_utils_time",
  "source/sak_utils_net",
  "source/sak_contract_std",
  "source/sak_machine",
  "source/sak_ledger",
  "source/sak_ledger_cfg",
  "source/sak_ledger_testing",
  "source/hyper_server",
  "source/hyper_rpc_router",
  "source/sak_vm",
  "source/sak_vm_interface",
  "source/sak_test_utils",
  "source/wasm_postprocess",
  "source/type_extension",
  "source/saksaha_rs",
  "source/saksaha_wallet",

  # Contracts (independently compiled and processed)
  "source/sak_validator_contract",
  "source/sak_mrs_contract",

  # internals
  "internals/ci",

  # externals
  "externals/envelope_term",
  "externals/envelope_contract",
]
