[package]
name = "saksaha_peer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saksaha_logger = { path = "../logger" }
saksaha_p2p_identity = { path = "../p2p/identity" }
k256 = { version = "0.9.6", features = ["ecdh"] }
rand_core = "0.6.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
thiserror = "1.0"
log = "0.4.0"

[lib]
doctest = false # until stable beta is released
