[package]
name = "saksaha"
version = "0.1.0"
edition = "2018"
default-run = "rsak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../logger" }
clap = "3.0.0-beta.4"
directories = "3.0"
k256 = "0.9.6"

[[bin]]
name = "rsak"
path = "src/bin/rsak/main.rs"

[[bin]]
name = "faucet"
path = "src/bin/faucet/main.rs"

[lib]
doctest = false # until stable beta is released
