[package]
name = "saksaha"
version = "0.1.0"
edition = "2018"
default-run = "sak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../logger" }
clap = "3.0.0-beta.4"
directories = "3.0"
k256 = { version = "0.9.6", features = ["ecdh"] }
rand_core = "0.6.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"

[[bin]]
name = "sak"
path = "src/bin/sak/main.rs"

[[bin]]
name = "faucet"
path = "src/bin/faucet/main.rs"

[lib]
doctest = false # until stable beta is released
