[package]
name = "saksaha"
version = "0.1.0"
edition = "2018"
default-run = "sak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saksaha_logger = { path = "../logger" }
saksaha_crypto = { path = "../crypto" }
saksaha_p2p_identity = { path = "../p2p/identity" }
saksaha_proofs = { path = "../proofs" }
saksaha_p2p_disc = { path = "../p2p/disc" }
clap = "3.0.0-beta.4"
directories = "3.0"
k256 = { version = "0.9.6", features = ["ecdh"] }
rand_core = "0.6.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"
once_cell = "1.8.0"
thiserror = "1.0"
log = "0.4.0"
env_logger = "0.9.0"

[[bin]]
name = "sak"
path = "src/bin/sak/main.rs"

[[bin]]
name = "faucet"
path = "src/bin/faucet/main.rs"

[lib]
doctest = false # until stable beta is released
