[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
crossterm = "0.22.1"