[package]
name = "ci"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "ci"
path = "main.rs"

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] }
lazy_static = "1.4.0"
colored = "2"
wasm_postprocess = { path = "../../source/wasm_postprocess" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
once_cell = "1.13.0"
sak_zkp_circuits = { path = "../../source/sak_zkp_circuits" }
sak_crypto = { path = "../../source/sak_crypto" }
chrono = "0.4"
