[package]
name = "blockchain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
database = { path = "../database" }
logger = { path = "../logger" }
file_system = { path = "../file_system" }
env_logger = "0.9.0"
crypto = { path = "../crypto" }
chrono = "0.4"
rand_core = "0.6.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
serde_bytes = "0.11.6"
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
rocksdb = "0.18.0"
wasmer = "2.2.1"

[lib]
doctest = false # until stable beta is released
