[package]
name = "hyper_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
sak_logger = { path = "../sak_logger" }
sak_crypto = { path = "../sak_crypto" }
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
sak_utils_time = { path = "../sak_utils_time" }
sak_utils_net = { path = "../sak_utils_net" }
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["full"] }
futures = "0.3.21"
async-trait = "0.1.58"
thiserror = "1.0"
colored = "2"

[lib]
doctest = false # until stable beta is released
