[package]
name = "p2p_discovery"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../logger" }
crypto = { path = "../crypto" }
task = { path = "../task" }
p2p_active_calls = { path = "../p2p_active_calls" }
p2p_identity = { path = "../p2p_identity" }
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"
k256 = { version = "0.9.6", features = ["ecdh"] }
log = "0.4.0"
rand = "0.8.4"
thiserror = "1.0"

[lib]
doctest = false # until stable beta is released
