[package]
name = "p2p_discovery"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "0.3.2"
env_logger = { version = "0.9.0" }
bytes = "1"
logger = { path = "../logger" }
crypto = { path = "../crypto" }
chrono = "0.4"
task_queue = { path = "../task_queue" }
p2p_addr = { path = "../p2p_addr" }
p2p_identity = { path = "../p2p_identity" }
p2p_frame = { path = "../p2p_frame" }
utils_time = { path = "../utils_time" }
utils_net = { path = "../utils_net" }
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["full"] }
futures = "0.3.21"
log = "0.4.0"
rand = "0.8.4"
thiserror = "1.0"
colored = "2"
lazy_static = "1.4.0"

[lib]
doctest = false # until stable beta is released
