[package]
name = "p2p_peer_table"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../logger" }
p2p_identity = { path = "../p2p_identity" }
p2p_transport = { path = "../p2p_transport" }
p2p_discovery = { path = "../p2p_discovery" }
rand_core = "0.6.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
thiserror = "1.0"
log = "0.4.0"
chrono = "0.4"
colored = "2"

[lib]
doctest = false # until stable beta is released
