[package]
name = "p2p_transport"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p2p_active_calls = { path = "../p2p_active_calls" }
p2p_identity = { path = "../p2p_identity" }
peer = { path = "../peer" }
logger = { path = "../logger" }
k256 = { version = "0.9.6", features = ["ecdh"] }
rand_core = "0.6.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
rand = "0.8.4"
log = "0.4.0"
thiserror = "1.0"
tokio = { version = "1.12.0", features = ["full"] }

[lib]
doctest = false # until stable beta is released
