[package]
name = "p2p_transport"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
p2p_addr = { path = "../p2p_addr" }
p2p_identity = { path = "../p2p_identity" }
p2p_frame = { path = "../p2p_frame" }
p2p_discovery = { path = "../p2p_discovery" }
logger = { path = "../logger" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
rand = "0.8.4"
log = "0.4.0"
thiserror = "1.0"
futures = "0.3.21"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["full"] }
bytes = "1"
atoi = "0.4.0"
colored = "2"
chrono = "0.4"
utils_net = { path = "../utils_net" }

[lib]
doctest = false # until stable beta is released
