[package]
name = "sak_contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] }
sak_logger = { path = "../sak_logger" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
thiserror = "1.0"
futures = "0.3.21"
bytes = "1"
atoi = "0.4.0"
colored = "2"
chrono = "0.4"
# wabt = "0.9.0"

[lib]
doctest = false # until stable beta is released

[[bin]]
name = "sak_compiler"
path = "src/v0/bin/compiler.rs"
