[package]
name = "sak_contract_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sak_logger = { path = "../sak_logger" }
sak_store_interface = { path = "../sak_store_interface" }
sak_contract_std = { path = "../sak_contract_std" }
sak_contract_derive = { path = "../sak_contract_derive" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
colored = "2"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
sak_test_utils = { path = "../../source/sak_test_utils" }

[lib]
doctest = false # until stable beta is released
