[package]
name = "sak_crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sak_logger = { path = "../sak_logger" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
k256 = { version = "0.9.6", features = ["ecdh"] }
bellman = "0.11.1"
bls12_381 = "0.6.0"
ff = "0.11"
pairing = "0.21.0"
sha3 = "0.10.1"
rand_core = "0.6.3"
rand = "0.8.4"

[lib]
doctest = false # until stable beta is released
