[package]
name = "sak_crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type_extension = { path = "../../source/type_extension" }
sak_logger = { path = "../sak_logger" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
k256 = { version = "0.9.6", features = ["ecdh"] }
bls12_381 = "0.6.0"
pairing = "0.21.0"
sha3 = "0.10.1"
rand_core = "0.6.3"
rand = "0.8.4"
base64ct = { version = "1.5.0", features = ["alloc"] }
hkdf = "0.12.3"
sha2 = "0.10.1"
aes-gcm-siv = "0.10.3"
log = "0.4"
jni = "0.5.2"

[dev-dependencies]
sak_test_utils = { path = "../sak_test_utils" }

[lib]
crate_type = ["rlib", "staticlib", "dylib"]
doctest = false
