[package]
name = "sak_ctrt_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
sak_contract_std = { path = "../sak_contract_std/" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
