[package]
name = "sak_dir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
directories = "3.0"
sak_logger = { path = "../sak_logger" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1.12.0", features = ["full"] }

[lib]
doctest = false # until stable beta is released
