[package]
name = "sak_dist_ledger"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
colored = "2"
sak_kv_db = { path = "../sak_kv_db" }
sak_logger = { path = "../sak_logger" }
sak_contract_std = { path = "../sak_contract_std" }
sak_fs = { path = "../sak_fs" }
sak_vm = { path = "../sak_vm" }
sak_crypto = { path = "../sak_crypto" }
env_logger = "0.9.0"
chrono = "0.4"
rand_core = "0.6.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
serde_bytes = "0.11.6"
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
wasmtime = "0.37.0"
wasmtime-wasi = "0.37.0"
sak_utils_time = { path = "../sak_utils_time" }
sak_types = { path = "../sak_types" }
sak_task_queue = { path = "../sak_task_queue" }

[lib]
doctest = false # until stable beta is released
