[package]
name = "sak_dist_ledger_cfg"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
sak_logger = { path = "../sak_logger" }
sak_crypto = { path = "../sak_crypto" }
type_extension = { path = "../type_extension" }
chrono = "0.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
serde_bytes = "0.11.6"
async-trait = "0.1.57"

[dev-dependencies]
sak_test_utils = { path = "../sak_test_utils" }

[lib]
doctest = false # until stable beta is released
