[package]
name = "sak_jni"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
sak_proof = { path = "../sak_proof" }
sak_crypto = { path = "../sak_crypto" }
type_extension = { path = "../../source/type_extension" }
serde_json = "1.0.59"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
sak_logger = { path = "../sak_logger" }
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["full"] }
sak_test_utils = { path = "../sak_test_utils" }

[lib]
crate_type = ["rlib", "staticlib", "dylib"]
doctest = false
