[package]
name = "sak_kv_db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
sak_crypto = { path = "../sak_crypto" }
sak_fs = { path = "../sak_fs" }
sak_p2p_id = { path = "../sak_p2p_id" }
sak_p2p_disc = { path = "../sak_p2p_disc" }
sak_p2p_trpt = { path = "../sak_p2p_trpt" }
sak_p2p_ptable = { path = "../sak_p2p_ptable" }
sak_logger = { path = "../sak_logger" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
rand = "0.8.4"
log = "0.4.0"
thiserror = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
bytes = "1"
atoi = "0.4.0"
k256 = { version = "0.9.6", features = ["ecdh"] }
chrono = "0.4"
rocksdb = "0.18.0"

[lib]
doctest = false # until stable beta is released
