[package]
name = "sak_ledger"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
sak_kv_db = { path = "../sak_kv_db" }
sak_logger = { path = "../sak_logger" }
sak_contract_std = { path = "../sak_contract_std" }
sak_ledger_cfg = { path = "../sak_ledger_cfg" }
sak_dir = { path = "../sak_dir" }
sak_p2p_id = { path = "../sak_p2p_id" }
sak_crypto = { path = "../sak_crypto" }
type_extension = { path = "../type_extension" }
sak_proof = { path = "../sak_proof" }
chrono = "0.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
serde_bytes = "0.11.6"
tokio = { version = "1.12.0", features = ["full"] }
sak_utils_time = { path = "../sak_utils_time" }
sak_types = { path = "../sak_types" }
sak_task_queue = { path = "../sak_task_queue" }
async-trait = "0.1.57"
saksaha = { path = "../../source/saksaha_rs" }
sak_credential = { path = "../sak_credential" }
# sak_vm = { path = "../sak_vm" }

[dev-dependencies]
sak_test_utils = { path = "../sak_test_utils" }

[lib]
doctest = false # until stable beta is released
